# icu-autodiff

./: .gitignore  README.md  colab-compatible-requirements.txt  pyproject.toml  requirements.txt
data_access/: __init__.py  base_loader.py  ricu_loader.py
data_access/preprocessing/: __init__.py  missingness_delta_t.py  standardize.py
evaluation_framework/: ConditionalEvaluator.py  SyntheticTimeSeriesEvaluator.py  gru_d_evaluator.py  gru_evaluator.py  metric_utils.py  model_zoo.py  vis.py
notebooks/: 0_data_preperation.ipynb  1_training.ipynb  2_generating.ipynb  colab_setup.ipynb  setup_colab.ipynb
notebooks/outputs/mortality24/mimic/TimeAutoDiff/20250527_185640_10features_v4_efficient_simple_mimic_mortality24/: autoencoder.pt  metadata.json
timeautodiff/: helper_simple.py  processing_simple.py  timeautodiff_v4_efficient_simple.py
