[tool.poetry]
name = "icu-time-auto-diff"
version = "0.1.0"
description = "Package to generate and evaluate ICU synthetic Data"
authors = ["mahmoudibrahim98 <mahmoud_ibrahim98@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
seaborn = "^0.13.2"
plotly = "^6.1.1"
torch = "^2.7.0"
scikit-learn = "^1.6.1"
absl-py = "^2.3.0"
itables = "^2.4.0"
pyarrow = "^20.0.0"
wandb = "^0.19.11"
tqdm = "^4.67.1"
rich = "^14.0.0"
ipywidgets = "^8.1.7"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.4.3"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
